// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default config amends class names if styles import is provided: amends class names if styles import is provided 1`] = `
"
import './styles.css';

<div test=\\"test\\" styleName=\\"local\\"></div>;
<div test=\\"test\\" styleName=\\"local-one local-two\\"></div>;

      ↓ ↓ ↓ ↓ ↓ ↓

import __CSSM__ from \\"./styles.css\\";


<div test=\\"test\\" className={__CSSM__[\\"local\\"]}></div>;
<div test=\\"test\\" className={[__CSSM__[\\"local-one\\"], __CSSM__[\\"local-two\\"]].join(\\" \\")}></div>;
"
`;

exports[`default config combines global and local styles: combines global and local styles 1`] = `
"
import __CSSM__ from './styles.css';

<div className=\\"global\\" styleName=\\"local\\"></div>;

      ↓ ↓ ↓ ↓ ↓ ↓

import __CSSM__ from './styles.css';

<div className={[\\"global\\", __CSSM__[\\"local\\"]].join(\\" \\")}></div>;
"
`;

exports[`default config concats classes when globals are computed: concats classes when globals are computed 1`] = `
"
import './styles.css';

<div className={[test, 'string'].join(' ')} styleName=\\"local\\"></div>;

      ↓ ↓ ↓ ↓ ↓ ↓

import __CSSM__ from './styles.css';


<div className={[[test, 'string'].join(' '), __CSSM__['local']].join(' ')}></div>;
"
`;

exports[`default config concats classes when locals are computed: concats classes when locals are computed 1`] = `
"
import './styles.css';

<div className={test} styleName={\\"local-\\" + index}></div>;

      ↓ ↓ ↓ ↓ ↓ ↓

import __CSSM__ from \\"./styles.css\\";


<div className={[test, __CSSM__[\\"local-\\" + index]].join(\\" \\")}></div>;
"
`;

exports[`default config does not change import if styles is imported already: does not change import if styles is imported already 1`] = `
"
import __CSSM__ from './styles.css';

<div styleName=\\"local\\"></div>;
<div styleName=\\"local-one local-two\\"></div>;

      ↓ ↓ ↓ ↓ ↓ ↓

import __CSSM__ from './styles.css';

<div className={__CSSM__[\\"local\\"]}></div>;
<div className={[__CSSM__[\\"local-one\\"], __CSSM__[\\"local-two\\"]].join(\\" \\")}></div>;
"
`;

exports[`default config leaves plain literal for global class: leaves plain literal for global class 1`] = `
"
import './styles.css';

<div className=\\"global\\"></div>;

      ↓ ↓ ↓ ↓ ↓ ↓

import __CSSM__ from \\"./styles.css\\";


<div className=\\"global\\"></div>;
"
`;

exports[`default config leaves plain literals for global classes: leaves plain literals for global classes 1`] = `
"
import './styles.css';

<div className=\\"global-one global-two\\"></div>;

      ↓ ↓ ↓ ↓ ↓ ↓

import __CSSM__ from \\"./styles.css\\";


<div className=\\"global-one global-two\\"></div>;
"
`;
